[update] navbar, favicon, hero bio

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,7 +38,7 @@ const t = useTranslations(lang);
             : '/portfolio/FedeParrillaESP.pdf'}
           target="_blank"
         >
-          <i class="fa-solid fa-file text-[2.7rem]"></i>
+          <i class="fa-solid fa-file-contract text-[2.7rem]"></i>
         </a>
       </div>
     </div>
