--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -60,6 +60,16 @@ const flags = [
             </li>
           ))
         }
+        <li class="bg-cyan-100 text-gray-950 rounded-xl px-3 uppercase">
+          <a
+            href={lang === 'en'
+              ? '/portfolio/FedeParrillaENG.pdf'
+              : '/portfolio/FedeParrillaESP.pdf'}
+            target="_blank"
+          >
+            {t('nav.cv')}
+          </a>
+        </li>
       </ul>
 
       <ul class="flex flex-row items-center justify-center gap-3">
