--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -14,7 +14,7 @@ const t = useTranslations(lang);
 
   <div>
     <ol class="relative border-l border-gray-700">
-      <li class="mb-10 ml-4">
+      <li class="ml-4">
         <div
           class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
         >
@@ -42,7 +42,7 @@ const t = useTranslations(lang);
           </li>
         </ul>
       </li>
-      <li class="mb-10 ml-4">
+      <li class="ml-4">
         <div
           class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
         >
