[update] optimize images

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -43,7 +43,7 @@ const t = useTranslations(lang);
       </div>
     </div>
     <img
-      src="/portfolio/mainimg.jpg"
+      src="/portfolio/mainimg.webp"
       alt=""
       class="rounded-full h-52 w-52 md:h-64 md:w-64"
     />
