--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -45,7 +45,7 @@ const flags = [
 <section class="pt-2">
   <nav class="flex items-center justify-between">
     <img
-      src="/portfolio/fplogo.png"
+      src="/portfolio/fplogo.webp"
       class="h-6 w-6 object-contain"
       alt="FedeParrilla Logo"
     />
@@ -60,7 +60,9 @@ const flags = [
             </li>
           ))
         }
-        <li class="bg-cyan-100 text-gray-950 rounded-xl px-3 uppercase">
+        <li
+          class="bg-cyan-100 text-gray-950 rounded-xl px-3 uppercase cursor-pointer"
+        >
           <a
             href={lang === 'en'
               ? '/portfolio/FedeParrillaENG.pdf'
