--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -29,7 +29,7 @@ const linkButtons = [
       allProjects.map((project) => (
         <div class="flex flex-col lg:flex-row gap-4 lg:gap-10">
           <img
-            class="rounded-3xl lg:w-2/5 lg:h-64 lg:object-cover lg:object-top"
+            class="rounded-3xl lg:w-2/5 lg:h-64 lg:object-cover"
             src={project.img}
             alt={project.name}
           />
