[update] add aria-label to links

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,10 +26,18 @@ const t = useTranslations(lang);
       <div
         class="flex flex-row w-12 gap-5 items-center justify-center lg:items-start lg:justify-start"
       >
-        <a href="https://github.com/fedeparrilla10" target="_blank">
+        <a
+          href="https://github.com/fedeparrilla10"
+          target="_blank"
+          aria-label="GitHub"
+        >
           <i class="fa-brands fa-github text-[2.7rem]"></i>
         </a>
-        <a href="https://www.linkedin.com/in/fedeparrilla/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/fedeparrilla/"
+          target="_blank"
+          aria-label="LinkedIn"
+        >
           <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
         </a>
         <a
@@ -37,6 +45,7 @@ const t = useTranslations(lang);
             ? '/portfolio/FedeParrillaENG.pdf'
             : '/portfolio/FedeParrillaESP.pdf'}
           target="_blank"
+          aria-label="CV"
         >
           <i class="fa-solid fa-file-contract text-[2.7rem]"></i>
         </a>
