--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ const t = useTranslations(lang);
   <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
     {t('hero.hello')}
     <span
-      class="bg-gradient-to-r from-cyan-300 to-cyan-200 text-transparent bg-clip-text tracking-wide"
+      class="bg-gradient-to-r from-cyan-300 to-cyan-200 text-transparent bg-clip-text"
       >Fede Parrilla</span
     >, <br />{t('hero.job')}
   </h1>
