--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<section class="pt-8 mb-10 flex flex-col gap-12" id="work-experience">
+<section class="mb-10 flex flex-col gap-12" id="work-experience">
   <h2
     class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
   >
