--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -8,7 +8,7 @@ import Layout from '../../layouts/Layout.astro';
 ---
 
 <Layout title="Fede Parrilla">
-  <main class="">
+  <main>
     <Hero />
     <WorkExperience />
     <Projects />
