--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@
 ---
 
 <section class="flex items-center justify-center mt-20 mb-3">
-  <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla 2024</h3>
+  <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla - 2024</h3>
 </section>
