--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
@@ -24,21 +25,33 @@ const t = useTranslations(lang);
       </p>
 
       <div
-        class="flex flex-row w-12 gap-5 items-center justify-center lg:items-start lg:justify-start"
+        class="flex flex-row gap-5 items-center justify-center lg:items-start lg:justify-start"
       >
         <a
           href="https://github.com/fedeparrilla10"
           target="_blank"
           aria-label="GitHub"
         >
-          <i class="fa-brands fa-github text-[2.7rem]"></i>
+          <Image
+            src="/portfolio/rrss/github.svg"
+            alt="GitHub"
+            width={48}
+            height={48}
+            loading="lazy"
+          />
         </a>
         <a
           href="https://www.linkedin.com/in/fedeparrilla/"
           target="_blank"
           aria-label="LinkedIn"
         >
-          <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
+          <Image
+            src="/portfolio/rrss/linkedin.svg"
+            alt="LinkedIn"
+            width={48}
+            height={48}
+            loading="lazy"
+          />
         </a>
         <a
           href={lang === 'en'
@@ -47,14 +60,23 @@ const t = useTranslations(lang);
           target="_blank"
           aria-label="CV"
         >
-          <i class="fa-solid fa-file-contract text-[2.7rem]"></i>
+          <Image
+            src="/portfolio/rrss/resume.svg"
+            alt="CV"
+            width={48}
+            height={48}
+            loading="lazy"
+          />
         </a>
       </div>
     </div>
-    <img
+    <Image
       src="/portfolio/mainimg.webp"
-      alt=""
-      class="rounded-full h-52 w-52 md:h-64 md:w-64"
+      alt="Fede Parrilla"
+      width={256}
+      height={256}
+      loading="lazy"
+      class="rounded-full"
     />
   </div>
 </section>
