--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -61,7 +61,7 @@ const flags = [
           ))
         }
         <li
-          class="bg-cyan-100 text-gray-950 rounded-xl px-3 uppercase cursor-pointer"
+          class="bg-gradient-to-r from-cyan-300 to-cyan-500 text-gray-950 rounded-xl px-3 uppercase cursor-pointer font-semibold"
         >
           <a
             href={lang === 'en'
