--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import { getLangFromUrl } from '../i18n/utils';
 import Footer from '../components/Footer.astro';
 import NavBar from '../components/NavBar.astro';
@@ -25,6 +26,7 @@ const { title } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <ViewTransitions />
   </head>
   <body
     class="mx-auto max-w-screen-lg px-5 font-main text-white bg-gradient-to-b from-gray-900 to-gray-950 xs:text-[16px] md:text-[18px]"
