--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,11 +28,14 @@ const linkButtons = [
   <div class="flex gap-24 flex-col justify-center">
     {
       allProjects.map((project) => (
-        <div class="flex flex-col lg:flex-row gap-4 lg:gap-10">
-          <img
+        <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
+          <Image
             class="rounded-3xl lg:w-2/5 lg:h-64 transition duration-300 ease-in-out hover:scale-105"
             src={project.img}
             alt={project.name}
+            height={400}
+            width={400}
+            loading="lazy"
           />
           <div class="flex flex-col gap-6 justify-around">
             <div class="flex flex-col gap-3 items-center lg:items-start">
@@ -43,7 +46,13 @@ const linkButtons = [
                     <div
                       class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
                     >
-                      <img src={tech.img} class="w-5" alt={tech.name} />
+                      <Image
+                        src={tech.img}
+                        alt={tech.name}
+                        width={20}
+                        height={20}
+                        loading="lazy"
+                      />
                       <p>{tech.name}</p>
                     </div>
                   );
