--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,4 +1,5 @@
 ---
+import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import { allTechs } from '../data/stack.js';
 
@@ -20,7 +21,13 @@ const t = useTranslations(lang);
           <div
             class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
           >
-            <img src={tech.img} class="w-5" alt={tech.name} />
+            <Image
+              src={tech.img}
+              alt={tech.name}
+              width={20}
+              height={20}
+              loading="lazy"
+            />
             <p>{tech.name}</p>
           </div>
         );
