--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,27 +1,12 @@
 ---
 import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
+import { externalLinks } from '../data/external';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
-const rrss = [
-  {
-    name: 'GitHub',
-    src: '/portfolio/rrss/github.svg',
-    link: 'https://github.com/fedeparrilla10',
-  },
-  {
-    name: 'LinkedIn',
-    src: '/portfolio/rrss/linkedin.svg',
-    link: 'https://www.linkedin.com/in/fedeparrilla/',
-  },
-  {
-    name: 'Email',
-    src: '/portfolio/rrss/email.svg',
-    link: 'mailto:fedeparrilla.dev@gmail.com',
-  },
-];
+const { rrss, email } = externalLinks;
 ---
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="contact">
@@ -40,7 +25,7 @@ const rrss = [
             <a href={rrss.link} target="_blank">
               <div class="flex flex-row items-center gap-2 text-[1rem]">
                 <Image
-                  src={rrss.src}
+                  src={rrss.icon}
                   alt={rrss.name}
                   width={32}
                   height={32}
@@ -51,6 +36,22 @@ const rrss = [
             </a>
           );
         })
+      }
+      {
+        (
+          <a href={email.link} target="_blank">
+            <div class="flex flex-row items-center gap-2 text-[1rem]">
+              <Image
+                src={email.icon}
+                alt={email.name}
+                width={32}
+                height={32}
+                loading="lazy"
+              />
+              <p>{email.name}</p>
+            </div>
+          </a>
+        )
       }
     </div>
   </section>
