--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,12 @@
 ---
 import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
+import { externalLinks } from '../data/external';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+
+const { cv, rrss } = externalLinks;
 ---
 
 <section
@@ -27,46 +30,23 @@ const t = useTranslations(lang);
       <div
         class="flex flex-row gap-5 items-center justify-center lg:items-start lg:justify-start"
       >
-        <a
-          href="https://github.com/fedeparrilla10"
-          target="_blank"
-          aria-label="GitHub"
-        >
-          <Image
-            src="/portfolio/rrss/github.svg"
-            alt="GitHub"
-            width={48}
-            height={48}
-            loading="lazy"
-          />
-        </a>
-        <a
-          href="https://www.linkedin.com/in/fedeparrilla/"
-          target="_blank"
-          aria-label="LinkedIn"
-        >
-          <Image
-            src="/portfolio/rrss/linkedin.svg"
-            alt="LinkedIn"
-            width={48}
-            height={48}
-            loading="lazy"
-          />
-        </a>
+        {
+          rrss.map((rrss) => {
+            return (
+              <a href={rrss.link} target="_blank" aria-label={rrss.name}>
+                <Image src={rrss.icon} alt={rrss.name} width={48} height={48} />
+              </a>
+            );
+          })
+        }
         <a
           href={lang === 'en'
             ? '/portfolio/FedeParrillaENG.pdf'
             : '/portfolio/FedeParrillaESP.pdf'}
           target="_blank"
-          aria-label="CV"
+          aria-label={cv.name}
         >
-          <Image
-            src="/portfolio/rrss/resume.svg"
-            alt="CV"
-            width={48}
-            height={48}
-            loading="lazy"
-          />
+          <Image src={cv.icon} alt={cv.name} width={48} height={48} />
         </a>
       </div>
     </div>
@@ -75,7 +55,6 @@ const t = useTranslations(lang);
       alt="Fede Parrilla"
       width={256}
       height={256}
-      loading="lazy"
       class="rounded-full"
     />
   </div>
