--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -70,7 +70,7 @@ const linkButtons = [
                       button.name === 'Preview' ? project.preview : project.code
                     }
                     target="_blank"
-                    class="flex flex-row items-center gap-2 rounded-xl px-3 py-2 bg-slate-900 hover:bg-slate-800"
+                    class="flex flex-row items-center gap-2 rounded-xl px-3 py-2 bg-slate-900 transition duration-200 ease-in-out hover:bg-slate-800"
                   >
                     <Image
                       src={button.src}
