--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -43,8 +43,8 @@ const flags = [
 ];
 ---
 
-<section class="pt-2">
-  <nav class="flex items-center justify-between">
+<nav class="pt-2">
+  <section class="flex items-center justify-between">
     <Image
       src="/portfolio/fplogo.webp"
       class="h-6 w-6 object-contain"
@@ -98,5 +98,5 @@ const flags = [
         }
       </ul>
     </div>
-  </nav>
-</section>
+  </section>
+</nav>
