--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -25,7 +25,7 @@ const linkButtons = [
     🚀 {t('projects.title')}
   </h2>
 
-  <div class="flex gap-24 flex-col justify-center">
+  <article class="flex gap-24 flex-col justify-center">
     {
       allProjects.map((project) => (
         <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
@@ -88,5 +88,5 @@ const linkButtons = [
         </div>
       ))
     }
-  </div>
+  </article>
 </section>
