--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -12,7 +12,7 @@ const t = useTranslations(lang);
     💼 {t('work.title')}
   </h2>
 
-  <div>
+  <article>
     <ol class="relative border-l border-gray-700">
       <li class="ml-4">
         <div
@@ -58,5 +58,5 @@ const t = useTranslations(lang);
         </p>
       </li>
     </ol>
-  </div>
+  </article>
 </section>
