--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -16,7 +16,7 @@ const { rrss, email } = externalLinks;
     💬 {t('contact.title')}
   </h2>
   <section class="flex justify-center lg:justify-start items-center gap-10">
-    <div
+    <article
       class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start font-semibold"
     >
       {
@@ -53,6 +53,6 @@ const { rrss, email } = externalLinks;
           </a>
         )
       }
-    </div>
+    </article>
   </section>
 </section>
