--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,12 +6,10 @@ import Image from 'astro/components/Image.astro';
   <Image
     src="/portfolio/icons/code.svg"
     alt="Fede Parrilla"
-    width={20}
-    height={20}
+    width={22}
+    height={22}
     loading="lazy"
   />
 
-  <h3 class="font-mono text-sm text-cyan-50 font-semibold">
-    Fede Parrilla - 2024
-  </h3>
+  <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla - 2024</h3>
 </footer>
