--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -30,7 +30,7 @@ const linkButtons = [
       allProjects.map((project) => (
         <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
           <Image
-            class="rounded-3xl lg:w-2/5 lg:h-64 transition duration-300 ease-in-out hover:scale-105"
+            class="rounded-3xl lg:w-2/5 lg:h-64 md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
             src={project.img}
             alt={project.name}
             height={400}
@@ -70,7 +70,7 @@ const linkButtons = [
                       button.name === 'Preview' ? project.preview : project.code
                     }
                     target="_blank"
-                    class="flex flex-row items-center gap-2 rounded-xl px-3 py-2 bg-slate-900 transition duration-200 ease-in-out hover:bg-slate-800"
+                    class="flex flex-row items-center gap-2 rounded-xl px-3 py-2 bg-slate-900 md:transition md:duration-200 md:ease-in-out md:hover:bg-slate-800"
                   >
                     <Image
                       src={button.src}
