--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,11 +9,11 @@ const t = useTranslations(lang);
 const linkButtons = [
   {
     name: 'Preview',
-    src: '/portfolio/icons/link.svg',
+    src: 'icons/link.svg',
   },
   {
     name: 'Code',
-    src: '/portfolio/icons/code.svg',
+    src: 'icons/code.svg',
   },
 ];
 ---
