--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -40,9 +40,7 @@ const { cv, rrss } = externalLinks;
           })
         }
         <a
-          href={lang === 'en'
-            ? '/portfolio/FedeParrillaENG.pdf'
-            : '/portfolio/FedeParrillaESP.pdf'}
+          href={lang === 'en' ? 'FedeParrillaENG.pdf' : 'FedeParrillaESP.pdf'}
           target="_blank"
           aria-label={cv.name}
         >
@@ -51,7 +49,7 @@ const { cv, rrss } = externalLinks;
       </div>
     </div>
     <Image
-      src="/portfolio/mainimg.webp"
+      src="mainimg.webp"
       alt="Fede Parrilla"
       width={256}
       height={256}
