[update] route files

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import Image from 'astro/components/Image.astro';
 
 <footer class="flex items-center justify-center mt-20 mb-3 gap-2">
   <Image
-    src="icons/code.svg"
+    src="/icons/code.svg"
     alt="Fede Parrilla"
     width={22}
     height={22}
