--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -33,12 +33,12 @@ const flags = [
   {
     id: 1,
     name: 'Español',
-    src: 'spa.svg',
+    src: '/public/spa.svg',
   },
   {
     id: 2,
     name: 'English',
-    src: 'eng.svg',
+    src: '/public/eng.svg',
   },
 ];
 ---
@@ -46,7 +46,7 @@ const flags = [
 <nav class="pt-2">
   <section class="flex items-center justify-between">
     <Image
-      src="fplogo.webp"
+      src="/public/fplogo.webp"
       class="h-6 w-6 object-contain"
       alt="FedeParrilla Logo"
       width={24}
