--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -49,7 +49,7 @@ const { cv, rrss } = externalLinks;
       </div>
     </div>
     <Image
-      src="/public/mainimg.webp"
+      src="/mainimg.webp"
       alt="Fede Parrilla"
       width={256}
       height={256}
