--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -17,7 +17,7 @@ const { rrss, email } = externalLinks;
   </h2>
   <section class="flex justify-center lg:justify-start items-center gap-10">
     <article
-      class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start font-semibold"
+      class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start"
     >
       {
         rrss.map((rrss) => {
