--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ const { cv, rrss } = externalLinks;
   <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
     {t('hero.hello')}
     <span
-      class="bg-gradient-to-r from-cyan-300 to-cyan-200 text-transparent bg-clip-text"
+      class="bg-gradient-to-r from-cyan-300 to-cyan-100 text-transparent bg-clip-text tracking-wide"
       >Fede Parrilla</span
     >, <br />{t('hero.job')}
   </h1>
@@ -24,6 +24,7 @@ const { cv, rrss } = externalLinks;
   <section class="flex flex-col justify-center items-center lg:flex-row gap-10">
     <div class="flex flex-col gap-6 items-center lg:items-start">
       <p>
+        <span class="font-semibold">{t('hero.experience')}</span>.
         {t('hero.bio')}
       </p>
 
