[feature] add hover to navbar items

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -59,7 +59,9 @@ const flags = [
         {
           menuItems.map((item) => (
             <li>
-              <a href={item.link}>{item.name}</a>
+              <a href={item.link} class="hover:text-cyan-300">
+                {item.name}
+              </a>
             </li>
           ))
         }
