[update] changes in navbar

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -59,7 +59,7 @@ const flags = [
         {
           menuItems.map((item) => (
             <li>
-              <a href={item.link} class="hover:text-cyan-300">
+              <a href={item.link} class="hover:text-cyan-300 hover:font-bold">
                 {item.name}
               </a>
             </li>
