--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -19,14 +19,14 @@ const t = useTranslations(lang);
           class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
         >
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-500"
+        <time class="mb-1 text-sm font-normal leading-none text-gray-300"
           >{t('work.date')}
         </time>
-        <h3 class="text-lg font-semibold text-white">
+        <h3 class="text-lg font-bold primaryColor">
           {t('work.work')}
         </h3>
         <ul
-          class="mb-4 text-base font-normal text-gray-300 list-disc flex flex-col gap-2"
+          class="mb-4 text-base font-normal primaryColor list-disc flex flex-col gap-2"
         >
           <li>
             {t('work.functions.first')}
@@ -47,13 +47,13 @@ const t = useTranslations(lang);
           class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
         >
         </div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-500"
+        <time class="mb-1 text-sm font-normal leading-none text-gray-300"
           >{t('study.date')}</time
         >
-        <h3 class="text-lg font-semibold text-white">
+        <h3 class="text-lg font-bold primaryColor">
           {t('study.title')}
         </h3>
-        <p class="mb-4 text-base font-normal text-gray-300">
+        <p class="mb-4 text-base font-normal primaryColor">
           {t('study.description')}
         </p>
       </li>
