--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -25,9 +25,7 @@ const t = useTranslations(lang);
         <h3 class="text-lg font-bold primaryColor">
           {t('work.work')}
         </h3>
-        <ul
-          class="mb-4 text-base font-normal primaryColor list-disc flex flex-col gap-2"
-        >
+        <ul class="mb-4 text-base primaryColor list-disc flex flex-col gap-2">
           <li>
             {t('work.functions.first')}
           </li>
