--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,64 +28,72 @@ const linkButtons = [
   <article class="flex gap-24 md:gap-20 flex-col justify-center">
     {
       allProjects.map((project) => (
-        <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
-          <Image
-            class="rounded-3xl lg:w-2/5 lg:h-64 md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
-            src={project.img}
-            alt={project.name}
-            height={400}
-            width={400}
-            loading="lazy"
-          />
-          <div class="flex flex-col gap-6 justify-around">
-            <div class="flex flex-col gap-3 items-center lg:items-start">
-              <h3 class="text-2xl font-bold primaryColor">{project.name}</h3>
-              <div class="flex flex-row gap-2 justify-center lg:justify-start">
-                {project.tech.map((tech) => {
+        <>
+          <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
+            <Image
+              class="rounded-3xl lg:w-2/5 lg:h-64 md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
+              src={project.img}
+              alt={project.name}
+              height={400}
+              width={400}
+              loading="lazy"
+            />
+            <div class="flex flex-col gap-6 justify-around">
+              <div class="flex flex-col gap-3 items-center lg:items-start">
+                <h3 class="text-2xl font-bold primaryColor">{project.name}</h3>
+                <div class="flex flex-row gap-2 justify-center lg:justify-start">
+                  {project.tech.map((tech) => {
+                    return (
+                      <div
+                        class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
+                      >
+                        <Image
+                          src={tech.img}
+                          alt={tech.name}
+                          width={20}
+                          height={20}
+                          loading="lazy"
+                        />
+                        <p>{tech.name}</p>
+                      </div>
+                    );
+                  })}
+                </div>
+              </div>
+              <p class="primaryColor text-[1rem] text-center lg:text-start">
+                {lang === 'en'
+                  ? project.description_en
+                  : project.description_es}
+              </p>
+              <div class="flex flex-row gap-3 text-[1rem] justify-center lg:justify-start">
+                {linkButtons.map((button) => {
                   return (
-                    <div
-                      class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
+                    <a
+                      href={
+                        button.name === 'Preview'
+                          ? project.preview
+                          : project.code
+                      }
+                      target="_blank"
+                      class="flex flex-row items-center gap-2 rounded-xl px-3 py-[0.4rem] bg-slate-900 md:transition md:duration-200 md:ease-in-out md:hover:bg-slate-800"
                     >
                       <Image
-                        src={tech.img}
-                        alt={tech.name}
+                        src={button.src}
+                        alt={button.name}
                         width={20}
                         height={20}
                         loading="lazy"
                       />
-                      <p>{tech.name}</p>
-                    </div>
+                      <p>{button.name}</p>
+                    </a>
                   );
                 })}
               </div>
             </div>
-            <p class="primaryColor text-[1rem] text-center lg:text-start">
-              {lang === 'en' ? project.description_en : project.description_es}
-            </p>
-            <div class="flex flex-row gap-3 text-[1rem] justify-center lg:justify-start">
-              {linkButtons.map((button) => {
-                return (
-                  <a
-                    href={
-                      button.name === 'Preview' ? project.preview : project.code
-                    }
-                    target="_blank"
-                    class="flex flex-row items-center gap-2 rounded-xl px-3 py-[0.4rem] bg-slate-900 md:transition md:duration-200 md:ease-in-out md:hover:bg-slate-800"
-                  >
-                    <Image
-                      src={button.src}
-                      alt={button.name}
-                      width={20}
-                      height={20}
-                      loading="lazy"
-                    />
-                    <p>{button.name}</p>
-                  </a>
-                );
-              })}
-            </div>
           </div>
-        </div>
+
+          <hr class="md:hidden w-3/4 m-auto border-t-2 border-gray-100" />
+        </>
       ))
     }
   </article>
