[update] resume icon & text

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -67,7 +67,7 @@ const flags = [
           ))
         }
         <li
-          class="bg-gradient-to-r from-cyan-300 to-cyan-500 text-gray-950 rounded-xl px-3 uppercase cursor-pointer font-semibold"
+          class="bg-gradient-to-r from-cyan-300 to-cyan-500 text-gray-950 rounded-xl px-2 uppercase cursor-pointer font-bold"
         >
           <a
             href={lang === 'en'
