--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,9 +16,7 @@ const { cv, rrss } = externalLinks;
   <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
     {t('hero.hello')}<span class="waving-hand">{t('hero.wave')}</span>
     {t('hero.im')}
-    <span class="text-cyan-300 tracking-wide">Fede Parrilla</span>, <br />{
-      t('hero.job')
-    }
+    <span class="text-cyan-300">Fede Parrilla</span>, <br />{t('hero.job')}
   </h1>
 
   <section class="flex flex-col justify-center items-center lg:flex-row gap-10">
