--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const { cv, rrss } = externalLinks;
 ---
 
 <header
-  class="flex justify-around flex-col pt-8 pb-5 mt-1 md:mt-10 gap-8 lg:gap-3"
+  class="flex justify-around flex-col pt-8 pb-8 md:pb-0 mt-1 md:mt-14 gap-8 lg:gap-3"
   id="home"
 >
   <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
