--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,9 @@ const { cv, rrss } = externalLinks;
   class="flex justify-around flex-col pt-8 pb-8 md:pb-0 mt-1 md:mt-14 gap-8 lg:gap-3"
   id="home"
 >
-  <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
+  <h1
+    class="font-bold text-2xl md:text-4xl text-center lg:text-left animate-fade-up animate-duration-[2000ms]"
+  >
     {t('hero.hello')}<span class="waving-hand">{t('hero.wave')}</span>
     {t('hero.im')}
     <span class="text-cyan-300">Fede Parrilla</span>, <br />{t('hero.job')}
@@ -39,7 +41,7 @@ const { cv, rrss } = externalLinks;
                   width={48}
                   height={48}
                   loading="eager"
-                  class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
+                  class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 animate-fade-down animate-duration-[2000ms]"
                 />
               </a>
             );
@@ -56,7 +58,7 @@ const { cv, rrss } = externalLinks;
             width={48}
             height={48}
             loading="eager"
-            class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
+            class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 animate-fade-down animate-duration-[2000ms]"
           />
         </a>
       </div>
