[update] hero animations

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,7 +41,7 @@ const { cv, rrss } = externalLinks;
                   width={48}
                   height={48}
                   loading="eager"
-                  class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 animate-fade-down animate-duration-[2000ms]"
+                  class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 md:animate-fade-down md:animate-duration-[1500ms]"
                 />
               </a>
             );
@@ -58,7 +58,7 @@ const { cv, rrss } = externalLinks;
             width={48}
             height={48}
             loading="eager"
-            class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 animate-fade-down animate-duration-[2000ms]"
+            class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110 md:animate-fade-down md:animate-duration-[1500ms]"
           />
         </a>
       </div>
