[update] icons + name gradient

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,5 +11,5 @@ import Image from 'astro/components/Image.astro';
     loading="lazy"
   />
 
-  <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla - 2024</h3>
+  <h3 class="text-sm text-cyan-50">Fede Parrilla - 2024</h3>
 </footer>
