--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,6 +2,7 @@
 import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import { externalLinks } from '../data/external';
+import ContactIcon from '../../public/icons/email.webp';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -10,11 +11,12 @@ const { rrss, email } = externalLinks;
 ---
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="contact">
-  <h2
-    class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
-  >
-    💬 {t('contact.title')}
-  </h2>
+  <div class="flex items-center gap-4">
+    <Image src={ContactIcon} alt={t('contact.title')} class="w-8 h-8" />
+    <h2 class="font-semibold text-xl text-cyan-200 text-center lg:text-start">
+      {t('contact.title')}
+    </h2>
+  </div>
   <section class="flex justify-center lg:justify-start items-center gap-10">
     <article
       class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start"
