--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -1,16 +1,21 @@
 ---
+import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
+import WorkExperienceIcon from '../../public/icons/briefcase.webp';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
 <section class="pt-8 mb-10 flex flex-col gap-12" id="work-experience">
-  <h2
-    class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
-  >
-    💼 {t('work.title')}
-  </h2>
+  <div class="flex items-center gap-4">
+    <Image src={WorkExperienceIcon} alt={t('work.title')} class="w-8 h-8" />
+    <h2
+      class="font-semibold text-xl text-cyan-200 text-center lg:text-start pt-1"
+    >
+      {t('work.title')}
+    </h2>
+  </div>
 
   <article>
     <ol class="relative border-l border-gray-700">
