--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,7 +26,7 @@ const { cv, rrss } = externalLinks;
 
   <section class="flex flex-col justify-center items-center lg:flex-row gap-12">
     <div class="flex flex-col gap-12 items-center lg:items-start">
-      <p class="text-md">
+      <p class="text-[1.05rem]">
         <span class="font-semibold">{t('hero.experience')}</span>.
         {t('hero.bio')}
       </p>
@@ -41,8 +41,8 @@ const { cv, rrss } = externalLinks;
                 <Image
                   src={rrss.icon}
                   alt={rrss.name}
-                  width={48}
-                  height={48}
+                  width={42}
+                  height={42}
                   loading="eager"
                   class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
                 />
@@ -58,8 +58,8 @@ const { cv, rrss } = externalLinks;
           <Image
             src={cv.icon}
             alt={cv.name}
-            width={48}
-            height={48}
+            width={42}
+            height={42}
             loading="eager"
             class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
           />
