--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -44,7 +44,7 @@ const linkButtons = [
             />
             <div class="flex flex-col gap-6 justify-around">
               <div class="flex flex-col gap-3 items-center lg:items-start">
-                <h3 class="text-2xl font-bold primaryColor">{project.name}</h3>
+                <h3 class="text-xl font-bold primaryColor">{project.name}</h3>
                 <div class="flex flex-row gap-2 justify-center lg:justify-start">
                   {project.tech.map((tech) => {
                     return (
