--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -56,7 +56,7 @@ const t = useTranslations(lang);
         <h3 class="text-lg font-bold primaryColor">
           {t('study.title')}
         </h3>
-        <p class="mb-4 text-base font-normal primaryColor">
+        <p class="text-base font-normal primaryColor">
           {t('study.description')}
         </p>
       </li>
