[update] title gradient

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ const { cv, rrss } = externalLinks;
     {t('hero.hello')}<span class="waving-hand">{t('hero.wave')}</span>
     {t('hero.im')}
     <span
-      class="bg-gradient-to-r from-[#3ADFED] via-[#46ECD6] to-[#B9FA8E] inline-block text-transparent bg-clip-text"
+      class="bg-gradient-to-r from-[#5CF2E9] via-[#71F9CE] to-[#98FCAD] inline-block text-transparent bg-clip-text"
       >Fede Parrilla</span
     >, <br />{t('hero.job')}
   </h1>
