[update] general color changes

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -67,7 +67,7 @@ const flags = [
           ))
         }
         <li
-          class="bg-gradient-to-r from-cyan-300 to-cyan-500 text-gray-950 rounded-xl px-2 uppercase cursor-pointer font-bold md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
+          class="bg-gradient-to-r from-[#5CF2E9] via-[#71F9CE] to-[#98FCAD] text-gray-950 rounded-xl px-2 uppercase cursor-pointer font-bold md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
         >
           <a
             href={lang === 'en'
