--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -23,7 +23,7 @@ const linkButtons = [
   <div class="flex items-center gap-4">
     <Image src={ProjectsIcon} alt={t('projects.title')} class="w-8 h-8" />
     <h2
-      class="font-semibold text-xl text-cyan-200 text-center lg:text-start pb-2"
+      class="font-semibold text-xl sectionTitleColor text-center lg:text-start pb-2"
     >
       {t('projects.title')}
     </h2>
