--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -13,7 +13,9 @@ const { rrss, email } = externalLinks;
 <section class="pt-10 mb-10 flex flex-col gap-12" id="contact">
   <div class="flex items-center gap-4">
     <Image src={ContactIcon} alt={t('contact.title')} class="w-8 h-8" />
-    <h2 class="font-semibold text-xl text-cyan-200 text-center lg:text-start">
+    <h2
+      class="font-semibold text-xl sectionTitleColor text-center lg:text-start"
+    >
       {t('contact.title')}
     </h2>
   </div>
