--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -11,7 +11,9 @@ const t = useTranslations(lang);
 <section class="pt-10 mb-10 flex flex-col gap-12" id="skills">
   <div class="flex items-center gap-4">
     <Image src={SkillsIcon} alt={t('skills.title')} class="w-8 h-8" />
-    <h2 class="font-semibold text-xl text-cyan-200 text-center lg:text-start">
+    <h2
+      class="font-semibold text-xl sectionTitleColor text-center lg:text-start"
+    >
       {t('skills.title')}
     </h2>
   </div>
