--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
   <div class="flex items-center gap-4">
     <Image src={WorkExperienceIcon} alt={t('work.title')} class="w-8 h-8" />
     <h2
-      class="font-semibold text-xl text-cyan-200 text-center lg:text-start pt-1"
+      class="font-semibold text-xl sectionTitleColor text-center lg:text-start pt-1"
     >
       {t('work.title')}
     </h2>
