--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,9 +13,7 @@ const { cv, rrss } = externalLinks;
   class="flex justify-around flex-col pt-8 pb-8 md:pb-0 mt-1 md:mt-14 gap-8 lg:gap-3"
   id="home"
 >
-  <h1
-    class="font-bold text-2xl md:text-4xl text-center lg:text-left animate-fade-up animate-duration-[1500ms]"
-  >
+  <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
     {t('hero.hello')}<span class="waving-hand">{t('hero.wave')}</span>
     {t('hero.im')}
     <span
