[update] project img width

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -35,7 +35,7 @@ const linkButtons = [
         <>
           <div class="flex flex-col items-center lg:flex-row gap-4 lg:gap-10">
             <Image
-              class="rounded-3xl lg:w-2/5 lg:h-64 md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
+              class="rounded-3xl lg:w-full lg:h-60 object-cover object-left-top md:transition md:duration-300 md:ease-in-out md:hover:scale-105"
               src={project.img}
               alt={project.name}
               height={400}
