--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const sectionTitleColor = '#71F9CE';
     <ViewTransitions />
   </head>
   <body
-    class="mx-auto max-w-screen-lg px-5 font-main primaryColor bg-gradient-to-b from-gray-900 to-gray-950 xs:text-[16px] md:text-[18px]"
+    class="mx-auto max-w-screen-lg px-5 font-main primaryColor bg-gray-950 bg-[radial-gradient(ellipse_90%_80%_at_50%_-20%,rgba(120,119,198,0.2),rgba(255,255,255,0))] xs:text-[16px] md:text-[18px]"
   >
     <NavBar />
     <slot />
