[update] add new bullets to work experience

--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -43,6 +43,12 @@ const t = useTranslations(lang);
           <li>
             {t('work.functions.fourth')}
           </li>
+          <li>
+            {t('work.functions.fifth')}
+          </li>
+          <li>
+            {t('work.functions.sixth')}
+          </li>
         </ul>
       </li>
       <li class="ml-4">
