--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -43,16 +43,8 @@ const flags = [
 ];
 ---
 
-<nav class="pt-2">
-  <section class="flex items-center justify-between">
-    <Image
-      src="/fplogo.webp"
-      class="h-6 w-6 object-contain"
-      alt="FedeParrilla Logo"
-      width={24}
-      height={24}
-    />
-
+<nav class="pt-4 md:pt-2 md:sticky top-0 z-10 flex items-center justify-center">
+  <section class="flex items-center justify-center">
     <div class="flex flex-row gap-8">
       <ul
         class="hidden md:flex flex-row items-center justify-center gap-8 md:gap-5 text-sm uppercase text-cyan-100"
@@ -104,3 +96,17 @@ const flags = [
     </div>
   </section>
 </nav>
+
+<style>
+  section {
+    animation: nav-shadown 1s linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+  }
+
+  @keyframes nav-shadown {
+    to {
+      @apply shadow-lg backdrop-blur rounded-xl bg-gray-950/40 p-2;
+    }
+  }
+</style>
